proyecto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID np_create_global SEMI vars program_1
Rule 2     program -> PROGRAM ID np_create_global SEMI program_1
Rule 3     program_1 -> function program_1
Rule 4     program_1 -> main_block
Rule 5     vars -> vars_1
Rule 6     vars_1 -> LET vars_prima_1 vars_1
Rule 7     vars_1 -> LET vars_prima_1
Rule 8     vars_prima_1 -> ID COLON type np_add_vars SEMI
Rule 9     vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1
Rule 10    type -> INT type_1
Rule 11    type -> FLOAT type_1
Rule 12    type -> CHAR type_1
Rule 13    type -> BOOL type_1
Rule 14    type_1 -> LBRACKET expression RBRACKET
Rule 15    type_1 -> epsilon
Rule 16    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN block
Rule 17    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN block
Rule 18    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars block
Rule 19    function -> FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars block
Rule 20    main_block -> MAIN np_create_main_scope LPAREN RPAREN block
Rule 21    main_block -> MAIN np_create_main_scope LPAREN RPAREN vars block
Rule 22    block -> LBRACE statements RBRACE
Rule 23    return_type -> VOID
Rule 24    return_type -> type
Rule 25    params -> ID COLON type np_add_vars COMMA params
Rule 26    params -> ID COLON type np_add_vars
Rule 27    statements -> assignment statements1
Rule 28    statements -> condition statements1
Rule 29    statements -> writing statements1
Rule 30    statements -> reading statements1
Rule 31    statements -> repetition statements1
Rule 32    statements -> return statements1
Rule 33    statements -> function_call statements1
Rule 34    statements -> expression statements1
Rule 35    statements -> special_functions statements1
Rule 36    special_functions -> mean
Rule 37    special_functions -> median
Rule 38    special_functions -> mode
Rule 39    special_functions -> variance
Rule 40    special_functions -> standard_deviation
Rule 41    statements1 -> statements
Rule 42    statements1 -> epsilon
Rule 43    assignment -> ID np_add_id_quad EQUALS np_add_operator expression np_assign_expression SEMI
Rule 44    assignment -> ID LBRACKET expression RBRACKET EQUALS expression SEMI
Rule 45    condition -> IF LPAREN expression RPAREN np_condition_gotof block np_condition_end_gotof
Rule 46    condition -> IF LPAREN expression RPAREN np_condition_gotof block ELSE np_condition_goto_else block np_condition_end_gotof
Rule 47    expression -> exp
Rule 48    expression -> expression1 np_add_quadruple_logical
Rule 49    expression -> expression0 np_add_quadruple_or_and
Rule 50    expression0 -> expression AND np_add_operator expression
Rule 51    expression0 -> expression OR np_add_operator expression
Rule 52    expression1 -> exp LT np_add_operator exp
Rule 53    expression1 -> exp LE np_add_operator exp
Rule 54    expression1 -> exp GT np_add_operator exp
Rule 55    expression1 -> exp GE np_add_operator exp
Rule 56    expression1 -> exp EQ np_add_operator exp
Rule 57    expression1 -> exp NE np_add_operator exp
Rule 58    exp -> term np_add_quadruple_sum_min
Rule 59    exp -> term exp_1
Rule 60    exp_1 -> PLUS np_add_operator exp
Rule 61    exp_1 -> MINUS np_add_operator exp
Rule 62    term -> factor np_add_quadruple_times_div
Rule 63    term -> factor term_2
Rule 64    term_2 -> TIMES np_add_operator term
Rule 65    term_2 -> DIVIDE np_add_operator term
Rule 66    factor -> LPAREN np_add_paren expression RPAREN np_pop_paren
Rule 67    factor -> LBRACKET expression RBRACKET
Rule 68    factor -> function_call
Rule 69    factor -> factor_prima_1
Rule 70    factor_prima_1 -> PLUS varcte
Rule 71    factor_prima_1 -> MINUS varcte
Rule 72    factor_prima_1 -> varcte
Rule 73    varcte -> ID np_add_id_quad
Rule 74    varcte -> CTEI np_add_cte_int
Rule 75    varcte -> CTEF np_add_cte_float
Rule 76    varcte -> CTEC np_add_cte_char
Rule 77    varcte -> TRUE np_add_cte_bool
Rule 78    varcte -> FALSE np_add_cte_bool
Rule 79    writing -> PRINT LPAREN writing_1 RPAREN SEMI
Rule 80    writing_1 -> expression np_add_print_quadruple_exp COMMA writing_1
Rule 81    writing_1 -> CTESTRING np_add_print_quadruple_str COMMA writing_1
Rule 82    writing_1 -> expression np_add_print_quadruple_exp
Rule 83    writing_1 -> CTESTRING np_add_print_quadruple_str
Rule 84    reading -> READ LPAREN reading_1 RPAREN SEMI
Rule 85    reading_1 -> ID COMMA reading_1
Rule 86    reading_1 -> ID LBRACKET expression RBRACKET COMMA reading_1
Rule 87    reading_1 -> ID
Rule 88    reading_1 -> ID LBRACKET expression RBRACKET
Rule 89    repetition -> non_conditional_loop
Rule 90    repetition -> conditional_loop
Rule 91    conditional_loop -> WHILE np_while_init LPAREN expression RPAREN np_while_expression DO block np_while_end_block
Rule 92    non_conditional_loop -> FOR LPAREN ID np_add_id_quad EQUALS np_add_operator expression np_assign_expression_for TO expression np_non_conditional_limit BY expression RPAREN block np_non_conditional_end
Rule 93    return -> RETURN expression SEMI
Rule 94    function_call -> ID LPAREN RPAREN SEMI
Rule 95    function_call -> ID LPAREN function_call_1 RPAREN SEMI
Rule 96    function_call -> ID LPAREN function_call_1 RPAREN
Rule 97    function_call -> ID LPAREN RPAREN
Rule 98    function_call_1 -> expression
Rule 99    function_call_1 -> expression COMMA function_call_1
Rule 100   mean -> MEAN LPAREN expression RPAREN SEMI
Rule 101   median -> MEDIAN LPAREN expression RPAREN SEMI
Rule 102   mode -> MODE LPAREN expression RPAREN SEMI
Rule 103   variance -> VARIANCE LPAREN expression RPAREN SEMI
Rule 104   standard_deviation -> STDEV LPAREN expression RPAREN SEMI
Rule 105   epsilon -> <empty>
Rule 106   np_create_global -> <empty>
Rule 107   np_create_main_scope -> <empty>
Rule 108   np_create_new_scope -> <empty>
Rule 109   np_add_satck_vars -> <empty>
Rule 110   np_add_vars -> <empty>
Rule 111   np_add_id_quad -> <empty>
Rule 112   np_add_cte_int -> <empty>
Rule 113   np_add_cte_float -> <empty>
Rule 114   np_add_cte_char -> <empty>
Rule 115   np_add_cte_bool -> <empty>
Rule 116   np_add_operator -> <empty>
Rule 117   np_add_paren -> <empty>
Rule 118   np_pop_paren -> <empty>
Rule 119   np_add_quadruple_sum_min -> <empty>
Rule 120   np_add_quadruple_times_div -> <empty>
Rule 121   np_add_quadruple_logical -> <empty>
Rule 122   np_add_quadruple_or_and -> <empty>
Rule 123   np_assign_expression -> <empty>
Rule 124   np_condition_gotof -> <empty>
Rule 125   np_condition_end_gotof -> <empty>
Rule 126   np_condition_goto_else -> <empty>
Rule 127   np_while_init -> <empty>
Rule 128   np_while_expression -> <empty>
Rule 129   np_while_end_block -> <empty>
Rule 130   np_assign_expression_for -> <empty>
Rule 131   np_non_conditional_limit -> <empty>
Rule 132   np_non_conditional_end -> <empty>
Rule 133   np_add_print_quadruple_str -> <empty>
Rule 134   np_add_print_quadruple_exp -> <empty>

Terminals, with rules where they appear

AND                  : 50
BOOL                 : 13
BY                   : 92
CHAR                 : 12
COLON                : 8 16 17 18 19 25 26
COMMA                : 9 25 80 81 85 86 99
CTEC                 : 76
CTEF                 : 75
CTEI                 : 74
CTESTRING            : 81 83
DIVIDE               : 65
DO                   : 91
ELSE                 : 46
EQ                   : 56
EQUALS               : 43 44 92
FALSE                : 78
FLOAT                : 11
FOR                  : 92
FUNCTION             : 16 17 18 19
GE                   : 55
GT                   : 54
ID                   : 1 2 8 9 16 17 18 19 25 26 43 44 73 85 86 87 88 92 94 95 96 97
IF                   : 45 46
INT                  : 10
LBRACE               : 22
LBRACKET             : 14 44 67 86 88
LE                   : 53
LET                  : 6 7
LPAREN               : 16 17 18 19 20 21 45 46 66 79 84 91 92 94 95 96 97 100 101 102 103 104
LT                   : 52
MAIN                 : 20 21
MEAN                 : 100
MEDIAN               : 101
MINUS                : 61 71
MODE                 : 102
NE                   : 57
OR                   : 51
PLUS                 : 60 70
PRINT                : 79
PROGRAM              : 1 2
RBRACE               : 22
RBRACKET             : 14 44 67 86 88
READ                 : 84
RETURN               : 93
RPAREN               : 16 17 18 19 20 21 45 46 66 79 84 91 92 94 95 96 97 100 101 102 103 104
SEMI                 : 1 2 8 43 44 79 84 93 94 95 100 101 102 103 104
STDEV                : 104
TIMES                : 64
TO                   : 92
TRUE                 : 77
VARIANCE             : 103
VOID                 : 23
WHILE                : 91
error                : 

Nonterminals, with rules where they appear

assignment           : 27
block                : 16 17 18 19 20 21 45 46 46 91 92
condition            : 28
conditional_loop     : 90
epsilon              : 15 42
exp                  : 47 52 52 53 53 54 54 55 55 56 56 57 57 60 61
exp_1                : 59
expression           : 14 34 43 44 44 45 46 50 50 51 51 66 67 80 82 86 88 91 92 92 92 93 98 99 100 101 102 103 104
expression0          : 49
expression1          : 48
factor               : 62 63
factor_prima_1       : 69
function             : 3
function_call        : 33 68
function_call_1      : 95 96 99
main_block           : 4
mean                 : 36
median               : 37
mode                 : 38
non_conditional_loop : 89
np_add_cte_bool      : 77 78
np_add_cte_char      : 76
np_add_cte_float     : 75
np_add_cte_int       : 74
np_add_id_quad       : 43 73 92
np_add_operator      : 43 50 51 52 53 54 55 56 57 60 61 64 65 92
np_add_paren         : 66
np_add_print_quadruple_exp : 80 82
np_add_print_quadruple_str : 81 83
np_add_quadruple_logical : 48
np_add_quadruple_or_and : 49
np_add_quadruple_sum_min : 58
np_add_quadruple_times_div : 62
np_add_satck_vars    : 9
np_add_vars          : 8 25 26
np_assign_expression : 43
np_assign_expression_for : 92
np_condition_end_gotof : 45 46
np_condition_goto_else : 46
np_condition_gotof   : 45 46
np_create_global     : 1 2
np_create_main_scope : 20 21
np_create_new_scope  : 16 17 18 19
np_non_conditional_end : 92
np_non_conditional_limit : 92
np_pop_paren         : 66
np_while_end_block   : 91
np_while_expression  : 91
np_while_init        : 91
params               : 17 19 25
program              : 0
program_1            : 1 2 3
reading              : 30
reading_1            : 84 85 86
repetition           : 31
return               : 32
return_type          : 16 17 18 19
special_functions    : 35
standard_deviation   : 40
statements           : 22 41
statements1          : 27 28 29 30 31 32 33 34 35
term                 : 58 59 64 65
term_2               : 63
type                 : 8 24 25 26
type_1               : 10 11 12 13
varcte               : 70 71 72
variance             : 39
vars                 : 1 18 19 21
vars_1               : 5 6
vars_prima_1         : 6 7 9
writing              : 29
writing_1            : 79 80 81

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID np_create_global SEMI vars program_1
    (2) program -> . PROGRAM ID np_create_global SEMI program_1

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID np_create_global SEMI vars program_1
    (2) program -> PROGRAM . ID np_create_global SEMI program_1

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . np_create_global SEMI vars program_1
    (2) program -> PROGRAM ID . np_create_global SEMI program_1
    (106) np_create_global -> .

    SEMI            reduce using rule 106 (np_create_global -> .)

    np_create_global               shift and go to state 4

state 4

    (1) program -> PROGRAM ID np_create_global . SEMI vars program_1
    (2) program -> PROGRAM ID np_create_global . SEMI program_1

    SEMI            shift and go to state 5


state 5

    (1) program -> PROGRAM ID np_create_global SEMI . vars program_1
    (2) program -> PROGRAM ID np_create_global SEMI . program_1
    (5) vars -> . vars_1
    (3) program_1 -> . function program_1
    (4) program_1 -> . main_block
    (6) vars_1 -> . LET vars_prima_1 vars_1
    (7) vars_1 -> . LET vars_prima_1
    (16) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN block
    (17) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN block
    (18) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars block
    (19) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars block
    (20) main_block -> . MAIN np_create_main_scope LPAREN RPAREN block
    (21) main_block -> . MAIN np_create_main_scope LPAREN RPAREN vars block

    LET             shift and go to state 11
    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    vars                           shift and go to state 6
    program_1                      shift and go to state 7
    vars_1                         shift and go to state 8
    function                       shift and go to state 9
    main_block                     shift and go to state 10

state 6

    (1) program -> PROGRAM ID np_create_global SEMI vars . program_1
    (3) program_1 -> . function program_1
    (4) program_1 -> . main_block
    (16) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN block
    (17) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN block
    (18) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars block
    (19) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars block
    (20) main_block -> . MAIN np_create_main_scope LPAREN RPAREN block
    (21) main_block -> . MAIN np_create_main_scope LPAREN RPAREN vars block

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    program_1                      shift and go to state 14
    function                       shift and go to state 9
    main_block                     shift and go to state 10

state 7

    (2) program -> PROGRAM ID np_create_global SEMI program_1 .

    $end            reduce using rule 2 (program -> PROGRAM ID np_create_global SEMI program_1 .)


state 8

    (5) vars -> vars_1 .

    FUNCTION        reduce using rule 5 (vars -> vars_1 .)
    MAIN            reduce using rule 5 (vars -> vars_1 .)
    LBRACE          reduce using rule 5 (vars -> vars_1 .)


state 9

    (3) program_1 -> function . program_1
    (3) program_1 -> . function program_1
    (4) program_1 -> . main_block
    (16) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN block
    (17) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN block
    (18) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN RPAREN vars block
    (19) function -> . FUNCTION ID COLON return_type np_create_new_scope LPAREN params RPAREN vars block
    (20) main_block -> . MAIN np_create_main_scope LPAREN RPAREN block
    (21) main_block -> . MAIN np_create_main_scope LPAREN RPAREN vars block

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    function                       shift and go to state 9
    program_1                      shift and go to state 15
    main_block                     shift and go to state 10

state 10

    (4) program_1 -> main_block .

    $end            reduce using rule 4 (program_1 -> main_block .)


state 11

    (6) vars_1 -> LET . vars_prima_1 vars_1
    (7) vars_1 -> LET . vars_prima_1
    (8) vars_prima_1 -> . ID COLON type np_add_vars SEMI
    (9) vars_prima_1 -> . ID np_add_satck_vars COMMA vars_prima_1

    ID              shift and go to state 17

    vars_prima_1                   shift and go to state 16

state 12

    (16) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN RPAREN block
    (17) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN params RPAREN block
    (18) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN RPAREN vars block
    (19) function -> FUNCTION . ID COLON return_type np_create_new_scope LPAREN params RPAREN vars block

    ID              shift and go to state 18


state 13

    (20) main_block -> MAIN . np_create_main_scope LPAREN RPAREN block
    (21) main_block -> MAIN . np_create_main_scope LPAREN RPAREN vars block
    (107) np_create_main_scope -> .

    LPAREN          reduce using rule 107 (np_create_main_scope -> .)

    np_create_main_scope           shift and go to state 19

state 14

    (1) program -> PROGRAM ID np_create_global SEMI vars program_1 .

    $end            reduce using rule 1 (program -> PROGRAM ID np_create_global SEMI vars program_1 .)


state 15

    (3) program_1 -> function program_1 .

    $end            reduce using rule 3 (program_1 -> function program_1 .)


state 16

    (6) vars_1 -> LET vars_prima_1 . vars_1
    (7) vars_1 -> LET vars_prima_1 .
    (6) vars_1 -> . LET vars_prima_1 vars_1
    (7) vars_1 -> . LET vars_prima_1

    FUNCTION        reduce using rule 7 (vars_1 -> LET vars_prima_1 .)
    MAIN            reduce using rule 7 (vars_1 -> LET vars_prima_1 .)
    LBRACE          reduce using rule 7 (vars_1 -> LET vars_prima_1 .)
    LET             shift and go to state 11

    vars_1                         shift and go to state 20

state 17

    (8) vars_prima_1 -> ID . COLON type np_add_vars SEMI
    (9) vars_prima_1 -> ID . np_add_satck_vars COMMA vars_prima_1
    (109) np_add_satck_vars -> .

    COLON           shift and go to state 21
    COMMA           reduce using rule 109 (np_add_satck_vars -> .)

    np_add_satck_vars              shift and go to state 22

state 18

    (16) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN RPAREN block
    (17) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN params RPAREN block
    (18) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN RPAREN vars block
    (19) function -> FUNCTION ID . COLON return_type np_create_new_scope LPAREN params RPAREN vars block

    COLON           shift and go to state 23


state 19

    (20) main_block -> MAIN np_create_main_scope . LPAREN RPAREN block
    (21) main_block -> MAIN np_create_main_scope . LPAREN RPAREN vars block

    LPAREN          shift and go to state 24


state 20

    (6) vars_1 -> LET vars_prima_1 vars_1 .

    FUNCTION        reduce using rule 6 (vars_1 -> LET vars_prima_1 vars_1 .)
    MAIN            reduce using rule 6 (vars_1 -> LET vars_prima_1 vars_1 .)
    LBRACE          reduce using rule 6 (vars_1 -> LET vars_prima_1 vars_1 .)


state 21

    (8) vars_prima_1 -> ID COLON . type np_add_vars SEMI
    (10) type -> . INT type_1
    (11) type -> . FLOAT type_1
    (12) type -> . CHAR type_1
    (13) type -> . BOOL type_1

    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    BOOL            shift and go to state 29

    type                           shift and go to state 25

state 22

    (9) vars_prima_1 -> ID np_add_satck_vars . COMMA vars_prima_1

    COMMA           shift and go to state 30


state 23

    (16) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN RPAREN block
    (17) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN params RPAREN block
    (18) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN RPAREN vars block
    (19) function -> FUNCTION ID COLON . return_type np_create_new_scope LPAREN params RPAREN vars block
    (23) return_type -> . VOID
    (24) return_type -> . type
    (10) type -> . INT type_1
    (11) type -> . FLOAT type_1
    (12) type -> . CHAR type_1
    (13) type -> . BOOL type_1

    VOID            shift and go to state 32
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    BOOL            shift and go to state 29

    return_type                    shift and go to state 31
    type                           shift and go to state 33

state 24

    (20) main_block -> MAIN np_create_main_scope LPAREN . RPAREN block
    (21) main_block -> MAIN np_create_main_scope LPAREN . RPAREN vars block

    RPAREN          shift and go to state 34


state 25

    (8) vars_prima_1 -> ID COLON type . np_add_vars SEMI
    (110) np_add_vars -> .

    SEMI            reduce using rule 110 (np_add_vars -> .)

    np_add_vars                    shift and go to state 35

state 26

    (10) type -> INT . type_1
    (14) type_1 -> . LBRACKET expression RBRACKET
    (15) type_1 -> . epsilon
    (105) epsilon -> .

    LBRACKET        shift and go to state 37
    SEMI            reduce using rule 105 (epsilon -> .)
    LPAREN          reduce using rule 105 (epsilon -> .)
    COMMA           reduce using rule 105 (epsilon -> .)
    RPAREN          reduce using rule 105 (epsilon -> .)

    type_1                         shift and go to state 36
    epsilon                        shift and go to state 38

state 27

    (11) type -> FLOAT . type_1
    (14) type_1 -> . LBRACKET expression RBRACKET
    (15) type_1 -> . epsilon
    (105) epsilon -> .

    LBRACKET        shift and go to state 37
    SEMI            reduce using rule 105 (epsilon -> .)
    LPAREN          reduce using rule 105 (epsilon -> .)
    COMMA           reduce using rule 105 (epsilon -> .)
    RPAREN          reduce using rule 105 (epsilon -> .)

    type_1                         shift and go to state 39
    epsilon                        shift and go to state 38

state 28

    (12) type -> CHAR . type_1
    (14) type_1 -> . LBRACKET expression RBRACKET
    (15) type_1 -> . epsilon
    (105) epsilon -> .

    LBRACKET        shift and go to state 37
    SEMI            reduce using rule 105 (epsilon -> .)
    LPAREN          reduce using rule 105 (epsilon -> .)
    COMMA           reduce using rule 105 (epsilon -> .)
    RPAREN          reduce using rule 105 (epsilon -> .)

    type_1                         shift and go to state 40
    epsilon                        shift and go to state 38

state 29

    (13) type -> BOOL . type_1
    (14) type_1 -> . LBRACKET expression RBRACKET
    (15) type_1 -> . epsilon
    (105) epsilon -> .

    LBRACKET        shift and go to state 37
    SEMI            reduce using rule 105 (epsilon -> .)
    LPAREN          reduce using rule 105 (epsilon -> .)
    COMMA           reduce using rule 105 (epsilon -> .)
    RPAREN          reduce using rule 105 (epsilon -> .)

    type_1                         shift and go to state 41
    epsilon                        shift and go to state 38

state 30

    (9) vars_prima_1 -> ID np_add_satck_vars COMMA . vars_prima_1
    (8) vars_prima_1 -> . ID COLON type np_add_vars SEMI
    (9) vars_prima_1 -> . ID np_add_satck_vars COMMA vars_prima_1

    ID              shift and go to state 17

    vars_prima_1                   shift and go to state 42

state 31

    (16) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN RPAREN block
    (17) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN params RPAREN block
    (18) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN RPAREN vars block
    (19) function -> FUNCTION ID COLON return_type . np_create_new_scope LPAREN params RPAREN vars block
    (108) np_create_new_scope -> .

    LPAREN          reduce using rule 108 (np_create_new_scope -> .)

    np_create_new_scope            shift and go to state 43

state 32

    (23) return_type -> VOID .

    LPAREN          reduce using rule 23 (return_type -> VOID .)


state 33

    (24) return_type -> type .

    LPAREN          reduce using rule 24 (return_type -> type .)


state 34

    (20) main_block -> MAIN np_create_main_scope LPAREN RPAREN . block
    (21) main_block -> MAIN np_create_main_scope LPAREN RPAREN . vars block
    (22) block -> . LBRACE statements RBRACE
    (5) vars -> . vars_1
    (6) vars_1 -> . LET vars_prima_1 vars_1
    (7) vars_1 -> . LET vars_prima_1

    LBRACE          shift and go to state 46
    LET             shift and go to state 11

    block                          shift and go to state 44
    vars                           shift and go to state 45
    vars_1                         shift and go to state 8

state 35

    (8) vars_prima_1 -> ID COLON type np_add_vars . SEMI

    SEMI            shift and go to state 47


state 36

    (10) type -> INT type_1 .

    SEMI            reduce using rule 10 (type -> INT type_1 .)
    LPAREN          reduce using rule 10 (type -> INT type_1 .)
    COMMA           reduce using rule 10 (type -> INT type_1 .)
    RPAREN          reduce using rule 10 (type -> INT type_1 .)


state 37

    (14) type_1 -> LBRACKET . expression RBRACKET
    (47) expression -> . exp
    (48) expression -> . expression1 np_add_quadruple_logical
    (49) expression -> . expression0 np_add_quadruple_or_and
    (58) exp -> . term np_add_quadruple_sum_min
    (59) exp -> . term exp_1
    (52) expression1 -> . exp LT np_add_operator exp
    (53) expression1 -> . exp LE np_add_operator exp
    (54) expression1 -> . exp GT np_add_operator exp
    (55) expression1 -> . exp GE np_add_operator exp
    (56) expression1 -> . exp EQ np_add_operator exp
    (57) expression1 -> . exp NE np_add_operator exp
    (50) expression0 -> . expression AND np_add_operator expression
    (51) expression0 -> . expression OR np_add_operator expression
    (62) term -> . factor np_add_quadruple_times_div
    (63) term -> . factor term_2
    (66) factor -> . LPAREN np_add_paren expression RPAREN np_pop_paren
    (67) factor -> . LBRACKET expression RBRACKET
    (68) factor -> . function_call
    (69) factor -> . factor_prima_1
    (94) function_call -> . ID LPAREN RPAREN SEMI
    (95) function_call -> . ID LPAREN function_call_1 RPAREN SEMI
    (96) function_call -> . ID LPAREN function_call_1 RPAREN
    (97) function_call -> . ID LPAREN RPAREN
    (70) factor_prima_1 -> . PLUS varcte
    (71) factor_prima_1 -> . MINUS varcte
    (72) factor_prima_1 -> . varcte
    (73) varcte -> . ID np_add_id_quad
    (74) varcte -> . CTEI np_add_cte_int
    (75) varcte -> . CTEF np_add_cte_float
    (76) varcte -> . CTEC np_add_cte_char
    (77) varcte -> . TRUE np_add_cte_bool
    (78) varcte -> . FALSE np_add_cte_bool

    LPAREN          shift and go to state 55
    LBRACKET        shift and go to state 48
    ID              shift and go to state 58
    PLUS            shift and go to state 59
    MINUS           shift and go to state 61
    CTEI            shift and go to state 62
    CTEF            shift and go to state 63
    CTEC            shift and go to state 64
    TRUE            shift and go to state 65
    FALSE           shift and go to state 66

    expression                     shift and go to state 49
    exp                            shift and go to state 50
    expression1                    shift and go to state 51
    expression0                    shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    function_call                  shift and go to state 56
    factor_prima_1                 shift and go to state 57
    varcte                         shift and go to state 60

state 38

    (15) type_1 -> epsilon .

    SEMI            reduce using rule 15 (type_1 -> epsilon .)
    LPAREN          reduce using rule 15 (type_1 -> epsilon .)
    COMMA           reduce using rule 15 (type_1 -> epsilon .)
    RPAREN          reduce using rule 15 (type_1 -> epsilon .)


state 39

    (11) type -> FLOAT type_1 .

    SEMI            reduce using rule 11 (type -> FLOAT type_1 .)
    LPAREN          reduce using rule 11 (type -> FLOAT type_1 .)
    COMMA           reduce using rule 11 (type -> FLOAT type_1 .)
    RPAREN          reduce using rule 11 (type -> FLOAT type_1 .)


state 40

    (12) type -> CHAR type_1 .

    SEMI            reduce using rule 12 (type -> CHAR type_1 .)
    LPAREN          reduce using rule 12 (type -> CHAR type_1 .)
    COMMA           reduce using rule 12 (type -> CHAR type_1 .)
    RPAREN          reduce using rule 12 (type -> CHAR type_1 .)


state 41

    (13) type -> BOOL type_1 .

    SEMI            reduce using rule 13 (type -> BOOL type_1 .)
    LPAREN          reduce using rule 13 (type -> BOOL type_1 .)
    COMMA           reduce using rule 13 (type -> BOOL type_1 .)
    RPAREN          reduce using rule 13 (type -> BOOL type_1 .)


state 42

    (9) vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .

    LET             reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)
    FUNCTION        reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)
    MAIN            reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)
    LBRACE          reduce using rule 9 (vars_prima_1 -> ID np_add_satck_vars COMMA vars_prima_1 .)


state 43

    (16) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN RPAREN block
    (17) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN params RPAREN block
    (18) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN RPAREN vars block
    (19) function -> FUNCTION ID COLON return_type np_create_new_scope . LPAREN params RPAREN vars block

    LPAREN          shift and go to state 67


state 44

    (20) main_block -> MAIN np_create_main_scope LPAREN RPAREN block .

    $end            reduce using rule 20 (main_block -> MAIN np_create_main_scope LPAREN RPAREN block .)


state 45

    (21) main_block -> MAIN np_create_main_scope LPAREN RPAREN vars . block
    (22) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 46

    block                          shift and go to state 68

state 46

    (22) block -> LBRACE . statements RBRACE
    (27) statements -> . assignment statements1
    (28) statements -> . condition statements1
    (29) statements -> . writing statements1
    (30) statements -> . reading statements1
    (31) statements -> . repetition statements1
    (32) statements -> . return statements1
    (33) statements -> . function_call statements1
    (34) statements -> . expression statements1
    (35) statements -> . special_functions statements1
    (43) assignment -> . ID np_add_id_quad EQUALS np_add_operator expression np_assign_expression SEMI
    (44) assignment -> . ID LBRACKET expression RBRACKET EQUALS expression SEMI
    (45) condition -> . IF LPAREN expression RPAREN np_condition_gotof block np_condition_end_gotof
    (46) condition -> . IF LPAREN expression RPAREN np_condition_gotof block ELSE np_condition_goto_else block np_condition_end_gotof
    (79) writing -> . PRINT LPAREN writing_1 RPAREN SEMI
    (84) reading -> . READ LPAREN reading_1 RPAREN SEMI
    (89) repetition -> . non_conditional_loop
    (90) repetition -> . conditional_loop
    (93) return -> . RETURN expression SEMI
    (94) function_call -> . ID LPAREN RPAREN SEMI
    (95) function_call -> . ID LPAREN function_call_1 RPAREN SEMI
    (96) function_call -> . ID LPAREN function_call_1 RPAREN
    (97) function_call -> . ID LPAREN RPAREN
    (47) expression -> . exp
    (48) expression -> . expression1 np_add_quadruple_logical
    (49) expression -> . expression0 np_add_quadruple_or_and
    (36) special_functions -> . mean
    (37) special_functions -> . median
    (38) special_functions -> . mode
    (39) special_functions -> . variance
    (40) special_functions -> . standard_deviation
    (92) non_conditional_loop -> . FOR LPAREN ID np_add_id_quad EQUALS np_add_operator expression np_assign_expression_for TO expression np_non_conditional_limit BY expression RPAREN block np_non_conditional_end
    (91) conditional_loop -> . WHILE np_while_init LPAREN expression RPAREN np_while_expression DO block np_while_end_block
    (58) exp -> . term np_add_quadruple_sum_min
    (59) exp -> . term exp_1
    (52) expression1 -> . exp LT np_add_operator exp
    (53) expression1 -> . exp LE np_add_operator exp
    (54) expression1 -> . exp GT np_add_operator exp
    (55) expression1 -> . exp GE np_add_operator exp
    (56) expression1 -> . exp EQ np_add_operator exp
    (57) expression1 -> . exp NE np_add_operator exp
    (50) expression0 -> . expression AND np_add_operator expression
    (51) expression0 -> . expression OR np_add_operator expression
    (100) mean -> . MEAN LPAREN expression RPAREN SEMI
    (101) median -> . MEDIAN LPAREN expression RPAREN SEMI
    (102) mode -> . MODE LPAREN expression RPAREN SEMI
    (103) variance -> . VARIANCE LPAREN expression RPAREN SEMI
    (104) standard_deviation -> . STDEV LPAREN expression RPAREN SEMI
    (62) term -> . factor np_add_quadruple_times_div
    (63) term -> . factor term_2
    (66) factor -> . LPAREN np_add_paren expression RPAREN np_pop_paren
    (67) factor -> . LBRACKET expression RBRACKET
    (68) factor -> . function_call
    (69) factor -> . factor_prima_1
    (70) factor_prima_1 -> . PLUS varcte
    (71) factor_prima_1 -> . MINUS varcte
    (72) factor_prima_1 -> . varcte
    (73) varcte -> . ID np_add_id_quad
    (74) varcte -> . CTEI np_add_cte_int
    (75) varcte -> . CTEF np_add_cte_float
    (76) varcte -> . CTEC np_add_cte_char
    (77) varcte -> . TRUE np_add_cte_bool
    (78) varcte -> . FALSE np_add_cte_bool
